Update checking samhsa code in the test.